study security policy in java